# kubepilot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEA.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eval-gate.yml  eval.yml  (+2 more)
docs/: ARCHITECTURE.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  README.md  ROADMAP.md  cli.md  install.md  llm-providers.md  mcp-adapters.md  memory.md  slack.md  tracing-and-ci.md  troubleshooting.md
eval/: README.md  __init__.py  conftest.py
scripts/: dev-cluster.sh  inject-failures.sh  minikube-down.sh  minikube-up.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/kubepilot_api/: __init__.py  audit.py  auth.py  config.py  events.py  main.py  orchestrator_client.py  pubsub.py  repository.py  settings_catalog.py  settings_store.py
services/api-gateway/src/kubepilot_api/routes/: approvals.py  health.py  investigations.py  settings.py
services/api-gateway/tests/: test_approvals.py  test_auth_multitenancy.py  test_calibration_endpoint.py  test_health.py  test_investigations.py  test_rbac_v2.py  test_resume.py  test_settings.py
services/cli/: pyproject.toml
services/cli/src/kubepilot_cli/: __init__.py  client.py  config.py  main.py  render.py
services/cli/tests/: test_cli.py  test_client.py  test_render.py
services/mcp-datadog/: Dockerfile  pyproject.toml
services/mcp-datadog/src/mcp_datadog/: __init__.py  client.py  models.py  server.py
services/mcp-datadog/src/mcp_datadog/tools/: __init__.py  base.py  logs.py  metrics.py
services/mcp-datadog/tests/: test_datadog.py
services/mcp-k8s/: Dockerfile  pyproject.toml
services/mcp-k8s-write/: Dockerfile  pyproject.toml
services/mcp-k8s-write/src/mcp_k8s_write/: __init__.py  apply.py  client.py  models.py  safety.py  server.py
services/mcp-k8s-write/src/mcp_k8s_write/tools/: __init__.py
services/mcp-k8s-write/tests/: test_apply.py  test_rbac_write.py  test_write_tools.py
services/mcp-k8s/src/mcp_k8s/: __init__.py  client.py  models.py  server.py
services/mcp-k8s/src/mcp_k8s/tools/: __init__.py  base.py  configmaps.py  deployments.py  events.py  nodes.py  pods.py  pvcs.py  services.py
services/mcp-k8s/tests/: conftest.py  test_health.py  test_rbac.py  test_server.py  test_tools_events.py  test_tools_pods.py
services/mcp-loki/: Dockerfile  pyproject.toml
services/mcp-loki/src/mcp_loki/: __init__.py  client.py  models.py  runtimes.py  server.py
services/mcp-loki/src/mcp_loki/tools/: __init__.py  base.py  errors.py  exceptions.py  logs.py
services/mcp-loki/tests/: conftest.py  test_health.py  test_runtimes.py  test_server.py  test_tools_logs.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/kubepilot_orch/: __init__.py  checkpointing.py  config.py  graph.py  observability.py  smoke_test.py  state.py  testing.py  timeline.py
services/orchestrator/src/kubepilot_orch/agents/: __init__.py  _runner.py  critic_agent.py  deployment_agent.py  finalize.py  knowledge_agent.py  kubernetes_agent.py  logs_agent.py  memory_agent.py  metrics_agent.py  prompt_registry.py  prompts.py  rca_agent.py  recommendation_agent.py  remediation_agent.py  supervisor.py  tracing_agent.py
services/orchestrator/src/kubepilot_orch/calibration/: __init__.py  calibrator.py
services/orchestrator/src/kubepilot_orch/guardrails/: __init__.py  policy.py  sanitize.py
services/orchestrator/src/kubepilot_orch/knowledge/: __init__.py  graph.py  ingest.py  ingest_cli.py  retriever.py
services/orchestrator/src/kubepilot_orch/llm/: __init__.py  _common.py  anthropic.py  azure.py  base.py  bedrock.py  factory.py  ollama.py  openai.py  parsing.py  router.py  vllm.py
services/orchestrator/src/kubepilot_orch/mcp/: __init__.py  adapter.py  client.py
services/orchestrator/src/kubepilot_orch/memory/: __init__.py  embedder.py  retriever.py  store.py
services/orchestrator/src/kubepilot_orch/policies/: 00-dev-restart.yaml  10-prod-rollback.yaml  20-prod-scale.yaml  30-node-ops.yaml  40-configmap-admin.yaml
services/orchestrator/src/kubepilot_orch/prompts/: critic_agent.md  deployment_agent.md  kubernetes_agent.md  logs_agent.md  metrics_agent.md  rca_agent.md  recommendation_agent.md  remediation_agent.md  tracing_agent.md
services/orchestrator/src/kubepilot_orch/rca/: __init__.py
services/orchestrator/src/kubepilot_orch/rca/runtimes/: __init__.py  go.md  java.md  library.py  node.md  python.md
services/orchestrator/src/kubepilot_orch/remediation/: __init__.py  approval.py  blast_radius.py  catalog.py  cluster_facts.py  executor.py  policy.py  rollback.py  selfheal.py  validation.py
services/orchestrator/tests/: conftest.py  test_agentops.py  test_blast_radius.py  test_calibration.py  test_critic_agent.py  test_end_to_end_investigation.py  test_guardrails.py  test_integration_stores.py  test_knowledge.py  test_knowledge_graph.py  test_kubernetes_agent.py  test_llm_providers_contract.py  test_llm_router.py  test_logs_agent.py  test_mcp_adapter.py  test_mcp_client.py  test_memory.py  test_memory_graph.py  test_metrics_agent.py  test_parsing.py  test_phase2_graph.py  test_prompt_registry.py  test_provider_tool_messages.py  test_rca_agent.py  test_recommendation_agent.py  test_remediation_agent.py  test_remediation_approval.py  test_remediation_cluster_facts.py  test_remediation_executor.py  test_remediation_graph.py  test_remediation_policy.py  test_remediation_rollback.py  test_remediation_selfheal.py  test_remediation_validation.py  test_runtime_library.py  test_state.py  test_timeline.py
services/orchestrator/tests/fixtures/checkpoints/: v1_sample.json  v2_sample.json  v3_sample.json  v4_sample.json
services/slack-bot/: Dockerfile  pyproject.toml
services/slack-bot/src/kubepilot_slack/: __init__.py  api_client.py  app.py  blocks.py  config.py  parse.py
services/slack-bot/tests/: test_api_client.py  test_blocks.py  test_parse.py
(+161 files in other folders)
