[project]
name = "kubepilot-ai"
version = "0.1.0-dev"
description = "Open-source Agentic SRE platform for Kubernetes"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Akash Kumar Sahani" }]
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/orchestrator",
    "services/api-gateway",
    "services/mcp-k8s",
    "services/mcp-prom",
    "services/mcp-loki",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # used by fastapi.testclient
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/.venv", "**/build", "**/dist"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # bugbear
    "UP",          # pyupgrade
    "SIM",         # simplify
    "RUF",         # ruff-specific
    "ASYNC",       # async best-practices
    "S",           # bandit (security)
]
ignore = [
    "E501",        # line too long (handled by formatter)
    "S101",        # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: requires running services (postgres, redis, mcp servers)",
    "slow: long-running tests",
    "live_llm: requires real LLM API key (not run in CI by default)",
]
