[project]
name = "kubepilot-api"
version = "0.1.0-dev"
description = "KubePilot AI API gateway (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "kubepilot-orch",
    "structlog>=24.4.0",
]

[tool.uv.sources]
kubepilot-orch = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubepilot_api"]
