[project]
name = "kubepilot-cli"
version = "0.1.0-dev"
description = "KubePilot AI command-line interface"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.scripts]
kubepilot = "kubepilot_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubepilot_cli"]
