[project]
name = "kubepilot-mcp-datadog"
version = "0.1.0-dev"
description = "Datadog observability-adapter MCP server for KubePilot AI (Phase 3 reference)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_datadog"]
