[project]
name = "kubepilot-mcp-k8s-write"
version = "0.1.0-dev"
description = "KubePilot AI write MCP server (Phase 4 — gated, dry-run by default)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "kubernetes>=31.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_k8s_write"]
