[project]
name = "kubepilot-mcp-k8s"
version = "0.1.0-dev"
description = "Kubernetes MCP server for KubePilot AI (read-only)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=31.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_k8s"]
