[project]
name = "kubepilot-orch"
version = "0.1.0-dev"
description = "KubePilot AI agent orchestration layer (LangGraph + LLM providers)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "langchain-aws>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
]

[project.optional-dependencies]
# AgentOps tracing (Phoenix / OTLP). Optional so minimal / air-gapped installs
# without a collector stay slim; kubepilot_orch.observability no-ops when absent.
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "openinference-instrumentation-langchain>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubepilot_orch"]
