[project]
name = "kubepilot-slack"
version = "0.1.0-dev"
description = "Slack bot for KubePilot AI — run incident investigations from Slack"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.20",
    "httpx>=0.27",
    "structlog>=24.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubepilot_slack"]
